test/test_units/test_kclvm/test_types/invalid_test_data/type_as/pkg/pkg2.k
schema Data:
    person: Person

data = Data {
    person: Person {
        name = "Alice"
        age = 18
    } as Person
}
